Fix foolish navbar spacing issues

--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -126,7 +126,7 @@ label {
     color: #1d2124;
     font-size: 17px;
     letter-spacing: .08em;
-    margin-right: 20px;
+    margin-right: 8px;
     padding-top: 26px;
 }
 
@@ -135,10 +135,10 @@ label {
     font-size: 12px;
     font-family: 'Montserrat', 'Questrial', 'Helvetica', sans-serif;
     letter-spacing: .1em;
-    margin-left: 5px;
-    margin-right: 12px;
+    margin-left: 7px;
+    margin-right: 6px;
     padding-bottom: 23px;
-    padding-top: 27px;
+    padding-top: 26px;
     text-transform: uppercase;
 }
 
